--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,11 @@
         <meta property="og:title" content="Well Marketing Scheduler" />
         <meta property="og:type" content="Web Application" />
         <meta property="og:image" content="%PUBLIC_URL%/screen.png" />
+        <meta name="version" content="0.1.0" />
+        <meta name="theme-color" content="#4285f4" />
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
         <title>Well Marketing Scheduler</title>
     </head>
     <body>
